namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-offences-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-offences-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_offences_public"
    cloud-platform.justice.gov.uk/slack-alert-channel: "farsight-alerts"
    cloud-platform.justice.gov.uk/application: "Manage offences"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-offences.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
